<?xml version="1.0" encoding="utf-8"?>
<!--

     ReGalAndroid, a gallery client for Android, supporting G2, G3, etc...
     URLs: https://github.com/anthonydahanne/ReGalAndroid , http://blog.dahanne.net
     Copyright (c) 2010 Anthony Dahanne
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program. If not, see <http://www.gnu.org/licenses/>.

-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/settings" android:title="@string/settings_label"
		android:icon="@android:drawable/ic_menu_preferences"
		android:alphabeticShortcut="@string/settings_shortcut" />
	<item android:id="@+id/about" android:title="@string/about_label"
		android:icon="@android:drawable/ic_menu_view"
		android:alphabeticShortcut="@string/about_shortcut" />
	<item android:id="@+id/clear_cache" android:title="@string/clear_cache_title"
		android:icon="@android:drawable/ic_notification_clear_all"
		android:alphabeticShortcut="@string/clear_cache_title" />
</menu>
