<?xml version="1.0" encoding="utf-8"?>
<!--

     ReGalAndroid, a gallery client for Android, supporting G2, G3, etc...
     URLs: https://github.com/anthonydahanne/ReGalAndroid , http://blog.dahanne.net
     Copyright (c) 2010 Anthony Dahanne
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program. If not, see <http://www.gnu.org/licenses/>.

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent" android:title="@string/create_album_label"
	android:layout_height="wrap_content">
			<TextView android:text="@string/type_new_subalbum_name"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:padding="15px"
				android:textStyle="bold" android:layout_gravity="center_vertical"
				android:textColor="#ffffff" />
			<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/subalbum_id" android:padding="15px" />
			<Button android:paddingTop="15px" android:layout_gravity="center" android:id="@+id/ok_id"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/create_subalbum"/>
				
</LinearLayout>